tests/integration/cli/tests/snapshots/snapshot__snapshot_vfork_async.snap
---
source: tests/integration/cli/tests/snapshot.rs
expression: snapshot
---
{
  "spec": {
    "name": "snapshot::test_snapshot_vfork_async",
    "use_packages": [
      "wasmer/coreutils"
    ],
    "include_webcs": [],
    "cli_args": [],
    "enable_threads": true,
    "enable_network": false,
    "enable_async_entrypoint": true
  },
  "result": {
    "Success": {
      "stdout": "Parent waiting on Child(2)\nChild(2) exited with 10\n",
      "stderr": "",
      "exit_code": 0
    }
  }
}
