tests/integration/cli/tests/snapshots/snapshot__snapshot_web_server.snap
---
source: tests/integration/cli/tests/snapshot.rs
assertion_line: 583
expression: snapshot
---
{
  "spec": {
    "name": "snapshot::test_snapshot_web_server",
    "use_packages": [
      "sharrattj/coreutils",
      "sharrattj/wasmer-sh"
    ],
    "include_webcs": [
      {
        "name": "sharrattj/static-web-server@1.0.92"
      },
      {
        "name": "sharrattj/wasmer-sh@1.0.63"
      },
      {
        "name": "sharrattj/coreutils@1.0.15"
      }
    ],
    "cli_args": [],
    "stdin_hash": "5341c172edb6109ca9aa44b67adc2eeb",
    "debug_output": false,
    "enable_threads": true,
    "enable_network": true
  },
  "result": {
    "Success": {
      "stdout": "",
      "stderr": "# # # # ",
      "exit_code": 0
    }
  }
}
