tests/integration/cli/tests/snapshots/snapshot__snapshot_web_server_internal-2.snap
---
source: tests/integration/cli/tests/snapshot.rs
assertion_line: 639
expression: snapshot
---
{
  "spec": {
    "name": "snapshot::test_snapshot_web_server_internal",
    "use_packages": [
      "sharrattj/coreutils",
      "sharrattj/wasmer-sh"
    ],
    "include_webcs": [
      {
        "name": "sharrattj/static-web-server@1.0.8"
      },
      {
        "name": "sharrattj/wasmer-sh@1.0.63"
      },
      {
        "name": "sharrattj/coreutils@1.0.16"
      }
    ],
    "cli_args": [],
    "stdin": [
      10,
      99,
      97,
      116,
      32,
      47,
      112,
      117,
      98,
      108,
      105,
      99,
      47,
      109,
      97,
      105,
      110,
      46,
      106,
      115,
      32,
      124,
      32,
      119,
      99,
      32,
      45,
      99,
      32,
      62,
      32,
      47,
      112,
      117,
      98,
      108,
      105,
      99,
      47,
      109,
      97,
      105,
      110,
      46,
      106,
      115,
      46,
      115,
      105,
      122,
      101,
      10,
      114,
      109,
      32,
      45,
      102,
      32,
      47,
      99,
      102,
      103,
      47,
      99,
      111,
      110,
      102,
      105,
      103,
      46,
      116,
      111,
      109,
      108,
      10,
      47,
      98,
      105,
      110,
      47,
      119,
      101,
      98,
      115,
      101,
      114,
      118,
      101,
      114,
      32,
      45,
      45,
      108,
      111,
      103,
      45,
      108,
      101,
      118,
      101,
      108,
      32,
      119,
      97,
      114,
      110,
      32,
      45,
      45,
      114,
      111,
      111,
      116,
      32,
      47,
      112,
      117,
      98,
      108,
      105,
      99,
      32,
      45,
      45,
      112,
      111,
      114,
      116,
      32,
      55,
      55,
      55,
      56
    ],
    "debug_output": false,
    "enable_threads": true,
    "enable_network": true,
    "enable_async_threads": true
  },
  "result": {
    "Error": "Command failed: error sending request for url (http://localhost:7778/main.js.size): error trying to connect: tcp connect error: Connection refused (os error 111)\n\nSTDOUT:\n\n\nSTDERR:\n# # # # # \n"
  }
}
