tests/integration/cli/tests/snapshots/snapshot__snapshot_web_server_poll.snap
---
source: tests/integration/cli/tests/snapshot.rs
expression: snapshot
---
{
  "spec": {
    "name": "snapshot::test_snapshot_web_server_poll",
    "use_packages": [],
    "include_webcs": [],
    "cli_args": [
      "--root",
      "/dev",
      "--log-level",
      "warn",
      "--port",
      "7779"
    ],
    "enable_threads": true,
    "enable_network": true,
    "enable_async_entrypoint": true
  },
  "result": {
    "Success": {
      "stdout": "",
      "stderr": "",
      "exit_code": 0
    }
  }
}
