tests/integration/cli/tests/snapshots/snapshot__snapshot_worker_terminating_normally.snap
---
source: tests/integration/cli/tests/snapshot.rs
assertion_line: 1327
expression: snapshot
---
{
  "spec": {
    "name": "snapshot::test_snapshot_worker_terminating_normally",
    "use_packages": [],
    "include_webcs": [],
    "cli_args": [],
    "enable_threads": true,
    "enable_network": false
  },
  "result": {
    "Success": {
      "stdout": "In child thread\nIn main thread\n",
      "stderr": "",
      "exit_code": 0
    }
  }
}
